src/test/error/func.lns
fn func() {
    return 1; // error
}
fn func(): int {
    return 1.0; // error
}
fn func(): ... {
    return 1.0;
}
fn func(): int, int {
    return 1, 0;
}
fn func(): int {
    return 1, 0; // error
}
fn func(): stem {
    return 1;
}
